package swarm;

message Header
{
	optional fixed32 method_hash 	= 1;
	optional uint32 token 			= 2;
	optional bool is_response 		= 3;
	optional uint32 object_id		= 4;
}

message PingRequest
{
	
}

message PingResponse
{
	
}

message ConnectionRequest
{
	optional bool create_game = 1;
}

message ConnectionResponse
{
}

message EnterGame
{
	optional uint32 gameId = 1;
	optional uint32 playerId = 2;
	repeated uint32 players = 3;
}

message PlayerUpdate
{
	enum Action {
		LEFT = 0;
		JOINED = 1;
		DIED = 2;
	}

	optional uint32 id = 1;
	optional Action action = 2;
}

message Vector2
{
	optional float x = 1;
	optional float y = 2;
}

message PlayerState
{
	optional uint32 id = 1;
	optional Vector2 pos = 2;
	optional Vector2 vel = 3;
	optional Vector2 acc = 4;
	optional uint32 time = 5;
}

message GameState
{
	optional uint32 gameId = 1;
	repeated PlayerState players = 2;
}
